# LinuxApplicationDevelopment2020

./: README.md
03_TerminalProject/: README  Show.c  makefile
04_Multifile/: README  fun.c  makefile  prog.c
05_Environmental/: CMakeLists.txt  Window.c  main.c
05_Environmental/library_reg/: CMakeLists.txt  Cmakeconfig.h.in  library_reg.h
05_Environmental/library_reg/sources/: library_reg.c
06_Debugging/: main.c
08_TestingCoverage/libbuf/: Makefile.am  configure.ac
08_TestingCoverage/libbuf/src/: Makefile.am  buf.c  buf.h  libbuf.c  tests.c
08_TestingCoverage/libbuf/tests/: Makefile.am  dummy.c  grow.ts  init.ts  pop.ts  push.ts  stest.ts
09_I18nL10n/: COPYING  configure.ac  guess.c  main.c  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  guess.c  guess.md.in  libguess.md.in  ru.po
11_Toolkits/: COPYING  Makefile.am  configure.ac  occur.c
12_ScriptingText/: configure.ac  insver.sh.in
12_ScriptingText/src/: buf.c  buf.h  libbuf.c
12_ScriptingText/tests/: Makefile.am
13_PatchInstall/: Makefile.am  README.md  configure.ac  guess.c  guess.pot
